small changes from marielle

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -9793,6 +9793,25 @@
   file = {/Users/nidhivinod/Zotero/storage/PXKUPKAJ/Parker et al. - 2019 - Consequences of environmental heterogeneity for th.pdf;/Users/nidhivinod/Zotero/storage/MXRGTVNJ/S0168192319302692.html}
 }
 
+@article{parkerPortableLIDARSystem2004,
+  title = {A Portable {{LIDAR}} System for Rapid Determination of Forest Canopy Structure},
+  author = {Parker, Geoffrey G. and Harding, David J. and Berger, Michelle L.},
+  date = {2004},
+  journaltitle = {Journal of Applied Ecology},
+  volume = {41},
+  number = {4},
+  pages = {755--767},
+  issn = {1365-2664},
+  doi = {10.1111/j.0021-8901.2004.00925.x},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.0021-8901.2004.00925.x},
+  urldate = {2022-02-19},
+  abstract = {1 The functional characteristics of forests are related to the organization of their canopies. However, understanding the relationship between canopy structure and function has been limited by a paucity of methods for determining structure at scales consistent with those of function measurements. 2 We describe here a portable system, assembled from commercially available components, for acquiring measurements of distances to overhead plant surfaces. These measurements can be aggregated to assess canopy structure rapidly at scales of ecological interest. Deployed from the forest floor, the system includes a narrow-beam rapidly pulsed first-return laser rangefinder coupled with a data recording system. 3 Tests in an age sequence of broad-leaved closed-canopy forests showed that the system provides results significantly more rapidly than previous methods, at spatial scales as small as 1 m in all dimensions. The estimated mean vertical canopy structure is consistent with that found from more laborious, manual approaches, such as the foliage height profile method. The system has some biases due to beam width and range averaging but, from a variety of tests, we found these have relatively little effect on the structure estimates. 4 Various field sampling schemes and methods of aggregating the measurements yield a variety of representations of structure, including mean profiles, tomographic sections, three-dimensional distributions of canopy surface density and maximum height surfaces. Derivable summary measures include canopy cover and area index, porosity, the size distribution of overhead openings and indices of structural complexity. Moreover, the approach can provide estimates of spatial variability and covariance not previously obtainable. 5 Synthesis and applications. Portable light detection and ranging (LIDAR) systems, such as the one we describe here, provide a new tool for rapid measurement of small-scale forest structure. These can contribute efficiently and relatively inexpensively to canopy research and forestry programmes, covering a range of ecological and production needs.},
+  langid = {english},
+  keywords = {canopy height profile,complexity,laser rangefinder,metrics,spatial variation,visualization},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.0021-8901.2004.00925.x},
+  file = {/Users/nidhivinod/Zotero/storage/2BED3ZDD/Parker et al. - 2004 - A portable LIDAR system for rapid determination of.pdf}
+}
+
 @article{parkerStructuralPhenologyLeaf2004,
   title = {Structural {{Phenology}} of the {{Leaf Community}} in the {{Canopy}} of a {{Liriodendron}} Tulipifera {{L}}. {{Forest}} in {{Maryland}}, {{USA}}},
   author = {Parker, Geoffrey G and Tibbs, Donna J},
@@ -10369,6 +10388,12 @@
   langid = {english},
   keywords = {Adaptation; Physiological,daily light integral (DLI),dose-response curve,Dose-Response Relationship; Radiation,functional groups,growth irradiance,Light,meta-analysis,Plant Development,Plants,Quantitative Trait; Heritable,reaction norm,shade tolerance},
   file = {/Users/nidhivinod/Zotero/storage/CJ6BT2N4/Poorter et al. - 2019 - A meta-analysis of plant responses to light intens.pdf}
+}
+
+@online{PortableLIDARSystem,
+  title = {A Portable {{LIDAR}} System for Rapid Determination of Forest Canopy Structure - {{PARKER}} - 2004 - {{Journal}} of {{Applied Ecology}} - {{Wiley Online Library}}},
+  url = {https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/j.0021-8901.2004.00925.x},
+  urldate = {2022-02-19}
 }
 
 @article{portnerScientificOutcomeIPBESIPCC2021,
