--- a/vertical-thermal-review_SI.Rmd
+++ b/vertical-thermal-review_SI.Rmd
@@ -75,11 +75,13 @@ We downloaded classified lidar point clouds as .laz files from the NEON (Nationa
 
 Lidar data were processed according to methods detailed in @starkAmazonForestCarbon2012. Outliers on the z plane (height) were removed by applying an interquartile range (IQR) approach. The IQR is calculated as the third quartile (Q3) minus the first quartile (Q1); lidar pulse returns were restricted to > Q1-(1.5xIQR) and < Q3+(1.5xIQR). Next, pulse return counts were quantified, or 'voxelized' within all 2 x 2 x 1 m voxels in a plot.
 
-Digital terrain models (DTMs) were created for each plot using minimum quantile spline regression and interpolation (see Shao et al. 2019) and used to normalize the voxelized lidar data with respect to the ground height. Leaf area density (LAD, $m^2$ $m^{-3}$) was estimated by applying the MacArthur-Horn transformation [@macarthurFoliageProfileVertical1969] to the voxelized pulse returns. We excluded LAD data at the bottom 5 m of the vertical profile, which are more uncertain due to limited pulse penetration within this region furthest away from the sensor [@starkAmazonForestCarbon2012]; for calibration purposes, we assumed the bottom 5 m to have a leaf area index (LAI) of 0.25 $m^2$ $m^{-2}$ [@shaoHighThroughputAssessment2019].
+Digital terrain models (DTMs) were created for each plot using minimum quantile spline regression and interpolation (see Shao et al. 2019) and used to normalize the voxelized lidar data with respect to the ground height. Leaf area density (LAD, $m^2$ $m^{-3}$) was estimated by applying the MacArthur-Horn transformation [@macarthurFoliageProfileVertical1969] to the voxelized pulse returns. We excluded LAD data at the bottom 5 m of the vertical profile, due to limited pulse penetration within this region furthest away from the sensor [@starkAmazonForestCarbon2012]; for calibration purposes, we assumed the bottom 5 m to have a leaf area index (LAI) of 0.25 $m^2 m^{-2}$ [@shaoHighThroughputAssessment2019].
 
-We scaled LAD values by a factor of 5.5 so that they matched an independent estimate of LAI. Specifically, published estimates of LAI at SERC (average of 5.78 $m^2$ $m^{-2}$) derived from litterfall [@parkerCanopySurfaceStand2004], which were then in good agreement with our lidar-derived estimate (5.75 $m^2$ $m^-2$).
-Generating leaf area and light transmission profiles
-Mean LAD profiles for each site were calculated as the mean LAD at each height. Mean light transmission profiles (proportion of incident light) were estimated by applying a vertical light reduction model to LAD estimates [@starkAmazonForestCarbon2012]. To estimate the proportion of sun leaves along the vertical profile, we isolated voxels in the upper canopy surface layer (1-2 m from the local canopy surface, likely to containing the majority of sun leaves), calculated the mean LAD profile for this surface layer, and divided it by the total mean LAD profile.
+We scaled LAD values by a factor of 5.5 so that they matched an independent estimate of LAI. Specifically, published estimates of LAI at SERC (average of 5.78 $m^2$ $m^{-2}$) derived from litterfall [@parkerPortableLIDARSystem2004], which were then in good agreement with our lidar-derived estimate (5.75 $m^2 m^-2$).
+
+*Generating leaf area and light transmission profiles.*
+
+Site-level LAD profiles were calculated as the mean LAD at each height. Mean light transmission profiles (proportion of incident light) were estimated by applying a vertical light reduction model to LAD estimates [@starkAmazonForestCarbon2012]. To estimate the proportion of sun leaves along the vertical profile, we isolated voxels in the upper canopy surface layer (1-2 m from the local canopy surface, likely contain the majority of sun leaves), calculated the mean LAD profile for this surface layer, and divided it by the total mean LAD profile.
 
 ## Analyzing biophysical gradients from micrometeorological data
 
