--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5704,6 +5704,16 @@
   keywords = {0414 Biogeochemical cycles,0416 Biogeophysics,0426 Biosphere/atmosphere interactions,0476 Plant ecology,and modeling,BIOGEOSCIENCES,processes}
 }
 
+@article{johnstonWhatLiesVerticalInpress,
+  title = {What Lies beneath: {{Vertical}} Heterogeneity in Blue Oak Canopy Temperatures.},
+  author = {Johnston, M. R. and A. Andreu, and J. Verfaillie, D. Baldocchi, {and} P. R. Moorcroft.},
+  year = {In press},
+  journaltitle = {Remote Sensing of Environment.},
+  url = {https://mail.google.com/mail/u/0/#inbox/FMfcgzGmvBlCSgSrhswnJSVCVMTtMnGV?projector=1&messagePartId=0.1},
+  urldate = {2022-02-19},
+  file = {/Users/nidhivinod/Zotero/storage/5C5B8HIH/Your manuscript citation - nidrup@gmail.com - Gmai.pdf}
+}
+
 @article{jonesManagingRedPine2019,
   title = {Managing Red Pine Stand Structure to Mitigate Drought Impacts},
   author = {Jones, Samantha M. and Bottero, Alessandra and Kastendick, Douglas N. and Palik, Brian J.},
