--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -9448,6 +9448,26 @@
   file = {/Users/nidhivinod/Zotero/storage/B6Z8EAKU/Ntawuhiganayo et al. - 2020 - Traits controlling shade tolerance in tropical mon.pdf;/Users/nidhivinod/Zotero/storage/G95ENUFK/5681304.html}
 }
 
+@article{nunesForestFragmentationImpacts2022,
+  title = {Forest Fragmentation Impacts the Seasonality of {{Amazonian}} Evergreen Canopies},
+  author = {Nunes, Matheus Henrique and Camargo, José Luís Campana and Vincent, Grégoire and Calders, Kim and Oliveira, Rafael S. and Huete, Alfredo and Mendes de Moura, Yhasmin and Nelson, Bruce and Smith, Marielle N. and Stark, Scott C. and Maeda, Eduardo Eiji},
+  date = {2022-02-17},
+  journaltitle = {Nat Commun},
+  volume = {13},
+  number = {1},
+  pages = {1--10},
+  publisher = {{Nature Publishing Group}},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-022-28490-7},
+  url = {https://www.nature.com/articles/s41467-022-28490-7},
+  urldate = {2022-02-20},
+  abstract = {Predictions of the magnitude and timing of leaf phenology in Amazonian forests remain highly controversial. Here, we use terrestrial LiDAR surveys every two weeks spanning wet and dry seasons in Central Amazonia to show that plant phenology varies strongly across vertical strata in old-growth forests, but is sensitive to disturbances arising from forest fragmentation. In combination with continuous microclimate measurements, we find that when maximum daily temperatures reached 35\,°C in the latter part of the dry season, the upper canopy of large trees in undisturbed forests lost plant material. In contrast, the understory greened up with increased light availability driven by the upper canopy loss, alongside increases in solar radiation, even during periods of drier soil and atmospheric conditions. However, persistently high temperatures in forest edges exacerbated the upper canopy losses of large trees throughout the dry season, whereas the understory in these light-rich environments was less dependent on the altered upper canopy structure. Our findings reveal a strong influence of edge effects on phenological controls in wet forests of Central Amazonia. Even evergreen tropical forests can have seasonal dynamics, which may be sensitive to disturbance. Here, the authors combine high-resolution remote sensing observations and microclimate data to show that forest fragmentation impacts canopy phenology dynamics in the Amazon forest.},
+  issue = {1},
+  langid = {english},
+  keywords = {Ecological modelling,Ecosystem ecology,Phenology,Tropical ecology},
+  file = {/Users/nidhivinod/Zotero/storage/HPL5MWGQ/Nunes et al. - 2022 - Forest fragmentation impacts the seasonality of Am.pdf}
+}
+
 @article{oberbauerEffectsCanopyPosition1986,
   title = {Effects of {{Canopy Position}} and {{Irradiance}} on the {{Leaf Physiology}} and {{Morphology}} of {{Pentaclethra Macroloba}} (Mimosaceae)},
   author = {Oberbauer, Steven F. and Strain, Boyd R.},
