--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1257,6 +1257,25 @@
   file = {/Users/nidhivinod/Zotero/storage/3R9CWM86/Bonan et al. - 2003 - A dynamic global vegetation model for use with cli.pdf;/Users/nidhivinod/Zotero/storage/V227AIDZ/j.1365-2486.2003.00681.html}
 }
 
+@article{bonanModelingCanopyinducedTurbulence2018,
+  title = {Modeling Canopy-Induced Turbulence in the {{Earth}} System: A Unified Parameterization of Turbulent Exchange within Plant Canopies and the Roughness Sublayer ({{CLM-ml}} V0)},
+  shorttitle = {Modeling Canopy-Induced Turbulence in the {{Earth}} System},
+  author = {Bonan, Gordon B. and Patton, Edward G. and Harman, Ian N. and Oleson, Keith W. and Finnigan, John J. and Lu, Yaqiong and Burakowski, Elizabeth A.},
+  date = {2018-04-16},
+  journaltitle = {Geoscientific Model Development},
+  volume = {11},
+  number = {4},
+  pages = {1467--1496},
+  publisher = {{Copernicus GmbH}},
+  issn = {1991-959X},
+  doi = {10.5194/gmd-11-1467-2018},
+  url = {https://gmd.copernicus.org/articles/11/1467/2018/},
+  urldate = {2022-02-20},
+  abstract = {{$<$}p{$><$}strong class="journal-contentHeaderColor"{$>$}Abstract.{$<$}/strong{$>$} Land surface models used in climate models neglect the roughness sublayer and parameterize within-canopy turbulence in an ad hoc manner. We implemented a roughness sublayer turbulence parameterization in a multilayer canopy model (CLM-ml v0) to test if this theory provides a tractable parameterization extending from the ground through the canopy and the roughness sublayer. We compared the canopy model with the Community Land Model (CLM4.5) at seven forest, two grassland, and three cropland AmeriFlux sites over a range of canopy heights, leaf area indexes, and climates. CLM4.5 has pronounced biases during summer months at forest sites in midday latent heat flux, sensible heat flux, gross primary production, nighttime friction velocity, and the radiative temperature diurnal range. The new canopy model reduces these biases by introducing new physics. Advances in modeling stomatal conductance and canopy physiology beyond what is in CLM4.5 substantially improve model performance at the forest sites. The signature of the roughness sublayer is most evident in nighttime friction velocity and the diurnal cycle of radiative temperature, but is also seen in sensible heat flux. Within-canopy temperature profiles are markedly different compared with profiles obtained using Monin–Obukhov similarity theory, and the roughness sublayer produces cooler daytime and warmer nighttime temperatures. The herbaceous sites also show model improvements, but the improvements are related less systematically to the roughness sublayer parameterization in these canopies. The multilayer canopy with the roughness sublayer turbulence improves simulations compared with CLM4.5 while also advancing the theoretical basis for surface flux parameterizations.{$<$}/p{$>$}},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/N3DZKEM7/Bonan et al. - 2018 - Modeling canopy-induced turbulence in the Earth sy.pdf}
+}
+
 @article{bonanMovingIncorrectUseful2021,
   title = {Moving beyond the Incorrect but Useful Paradigm: Reevaluating Big-Leaf and Multilayer Plant Canopies to Model Biosphere-Atmosphere Fluxes – a Review},
   shorttitle = {Moving beyond the Incorrect but Useful Paradigm},
@@ -1954,6 +1973,25 @@
   file = {/Users/nidhivinod/Zotero/storage/MCN7S6Q5/Chazdon and Fetcher - 1984 - Photosynthetic Light Environments in a Lowland Tro.pdf}
 }
 
+@article{chenColumnCanopyAirTurbulent2019,
+  title = {A {{Column Canopy-Air Turbulent Diffusion Method}} for {{Different Canopy Structures}}},
+  author = {Chen, Xuelong and Massman, William J. and Su, Zhongbo},
+  date = {2019},
+  journaltitle = {Journal of Geophysical Research: Atmospheres},
+  volume = {124},
+  number = {2},
+  pages = {488--506},
+  issn = {2169-8996},
+  doi = {10.1029/2018JD028883},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1029/2018JD028883},
+  urldate = {2022-02-20},
+  abstract = {An accurate simulation of the sensible heat flux (H) over vegetation from thermal remote sensing requires an a priori estimate of roughness length and the excess resistance parameter kB−1. Despite being the subject of considerable interest in hydrometeorology, there still does not exist a uniform method for estimating roughness length from remote sensing techniques. This study demonstrates a turbulent diffusion method to simulate canopy-air sensible heat. The performance of the roughness length scheme as described in Chen et al. (2013, https://doi.org/10.1175/JAMC-D-12-056.1) was examined by comparing simulated H to measured values at 28 flux tower stations, which include seven different land covers (needle forest, broadleaf forest, shrub, savanna, grassland, cropland, and sparsely vegetated land). The model predictions of H for grass, crop, and sparsely vegetated land compare favorably with observed values, when actual canopy height is given. H is significantly underestimated at forest sites due to a high value of kB−1. Among the different physical representations for the canopy, canopy-soil mixture, and soil component, it is found that such a high kB−1 value is caused by the high kB−1 value for the canopy part. The reasons for this high kB−1 were investigated from canopy-air physical process of turbulent diffusion. This study introduces the vertical foliage density information into a column canopy-air turbulent diffusion model to include the different momentum and heat transfer efficiencies in the vertical canopy layers to enhance the thermal turbulent transfer intensity above the tall canopy. The new model has been verified to provide accurate simulation over different canopy structures.},
+  langid = {english},
+  keywords = {canopy-air interaction,leaf drag coefficient,leaf heat transfer coefficients,roughness length,turbulent sensible heat flux,within-canopy wind},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1029/2018JD028883},
+  file = {/Users/nidhivinod/Zotero/storage/X3GBUCXR/Chen et al. - 2019 - A Column Canopy-Air Turbulent Diffusion Method for.pdf}
+}
+
 @article{chengPhotosynthesisLeafMorphology2012,
   title = {Photosynthesis, Leaf Morphology and Chemistry of {{Pinus}} Koraiensis and {{Quercus}} Mongolica in Broadleaved {{Korean}} Pine Mixed Forest},
   author = {Cheng, X. B. and Wu, J. and Han, S. J. and Zhou, Y. M. and Wang, X. X. and Wang, C. G. and Zhao, J. and Hu, Q. H.},
@@ -2296,6 +2334,12 @@
   abstract = {Abstract.  Leaf mass per area (LMA, g\hspace{0.25em}m−2) is an essential trait for modeling canopy function due to its strong association with photosynthesis, respiration and},
   langid = {english},
   file = {/Users/nidhivinod/Zotero/storage/YFENJ85Q/Coble and Cavaleri - 2014 - Light drives vertical gradients of leaf morphology.pdf;/Users/nidhivinod/Zotero/storage/85E7HBB3/1637874.html}
+}
+
+@online{ColumnCanopyAir,
+  title = {A {{Column Canopy}}‐{{Air Turbulent Diffusion Method}} for {{Different Canopy Structures}} - {{Chen}} - 2019 - {{Journal}} of {{Geophysical Research}}: {{Atmospheres}} - {{Wiley Online Library}}},
+  url = {https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2018JD028883},
+  urldate = {2022-02-20}
 }
 
 @article{conditQuantifyingDeciduousnessTropical2000c,
@@ -7368,6 +7412,44 @@
   abstract = {{$<$}p{$><$}strong class="journal-contentHeaderColor"{$>$}Abstract.{$<$}/strong{$>$} Vertical profiles in leaf mass per unit leaf area (\emph{M}\textsubscript{A}), foliar \textsuperscript{13}C composition (\&delta;\textsuperscript{13}C), nitrogen (N), phosphorus (P), carbon (C) and major cation concentrations were estimated for 204 rain forest trees growing in 57 sites across the Amazon Basin. Data was analysed using a multilevel modelling approach, allowing a separation of gradients within individual tree canopies (within-tree gradients) as opposed to stand level gradients occurring because of systematic differences occurring between different trees of different heights (between-tree gradients). Significant positive within-tree gradients (i.e. increasing values with increasing sampling height) were observed for \emph{M}\textsubscript{A} and [C]\textsubscript{DW} (the subscript denoting on a dry weight basis) with negative within-tree gradients observed for \&delta;\textsuperscript{13}C, [Mg]\textsubscript{DW} and [K]\textsubscript{DW}. No significant within-tree gradients were observed for [N]\textsubscript{DW}, [P]\textsubscript{DW} or [Ca]\textsubscript{DW}. The magnitudes of between-tree gradients were not significantly different to the within-tree gradients for \emph{M}\textsubscript{A}, \&delta;\textsuperscript{13}C, [C]\textsubscript{DW}, [K]\textsubscript{DW}, [N]\textsubscript{DW}, [P]\textsubscript{DW} and [Ca]\textsubscript{DW}. But for [Mg]\textsubscript{DW}, although there was no systematic difference observed between trees of different heights, strongly negative within-tree gradients were found to occur. {$<$}br{$><$}br{$>$} When expressed on a leaf area basis (denoted by the subscript "A"), significant positive gradients were observed for [N]\textsubscript{A}, [P]\textsubscript{A} and [K]\textsubscript{A} both within and between trees, these being attributable to the positive intra- and between-tree gradients in \emph{M}\textsubscript{A} mentioned above. No systematic within-tree gradient was observed for either [Ca]\textsubscript{A} or [Mg]\textsubscript{A}, but with a significant positive gradient observed for [Mg]\textsubscript{A} between trees (i.e. with taller trees tending to have a higher Mg per unit leaf area). {$<$}br{$><$}br{$>$} Significant differences in within-tree gradients between individuals were observed only for \emph{M}\textsubscript{A}, \&delta;\textsuperscript{13}C and [P]\textsubscript{ A}. This was best associated with the overall average [P]\textsubscript{A} for each tree, this also being considered to be a surrogate for a tree's average leaf area based photosynthetic capacity, \emph{A}\textsubscript{max}. A new model is presented which is in agreement with the above observations. The model predicts that trees characterised by a low upper canopy \emph{A}\textsubscript{max} should have shallow, or even non-existent, within-canopy gradients in \emph{A}\textsubscript{max}, with optimal intra-canopy gradients becoming sharper as a tree's upper canopy \emph{A}\textsubscript{max} increases. Nevertheless, in all cases it is predicted that the optimal within-canopy gradient in \emph{A}\textsubscript{max} should be substantially less than for photon irradiance. Although this is also shown to be consistent with numerous observations as illustrated by a literature survey of gradients in photosynthetic capacity for broadleaf trees, it is also in contrast to previously held notions of optimality. A new equation relating gradients in photosynthetic capacity within broadleaf tree canopies to the photosynthetic capacity of their upper canopy leaves is presented.{$<$}/p{$>$}},
   langid = {english},
   file = {/Users/nidhivinod/Zotero/storage/A5QKHJY7/Lloyd et al. - 2010 - Optimisation of photosynthetic carbon gain and wit.pdf;/Users/nidhivinod/Zotero/storage/33EBV267/2010.html}
+}
+
+@article{longoBiophysicsEcologyBiogeochemistry2019,
+  title = {The Biophysics, Ecology, and Biogeochemistry of Functionally Diverse, Vertically and Horizontally Heterogeneous Ecosystems: The {{Ecosystem Demography}} Model, Version 2.2 – {{Part}} 1: {{Model}} Description},
+  shorttitle = {The Biophysics, Ecology, and Biogeochemistry of Functionally Diverse, Vertically and Horizontally Heterogeneous Ecosystems},
+  author = {Longo, Marcos and Knox, Ryan G. and Medvigy, David M. and Levine, Naomi M. and Dietze, Michael C. and Kim, Yeonjoo and Swann, Abigail L. S. and Zhang, Ke and Rollinson, Christine R. and Bras, Rafael L. and Wofsy, Steven C. and Moorcroft, Paul R.},
+  date = {2019-10-14},
+  journaltitle = {Geoscientific Model Development},
+  volume = {12},
+  number = {10},
+  pages = {4309--4346},
+  publisher = {{Copernicus GmbH}},
+  issn = {1991-959X},
+  doi = {10.5194/gmd-12-4309-2019},
+  url = {https://gmd.copernicus.org/articles/12/4309/2019/},
+  urldate = {2022-02-20},
+  abstract = {{$<$}p{$><$}strong class="journal-contentHeaderColor"{$>$}Abstract.{$<$}/strong{$>$} Earth system models (ESMs) have been developed to represent the role of terrestrial ecosystems on the energy, water, and carbon cycles. However, many ESMs still lack representation of within-ecosystem heterogeneity and diversity. In this paper, we present the Ecosystem Demography model version 2.2 (ED-2.2). In ED-2.2, the biophysical and physiological processes account for the horizontal and vertical heterogeneity of the ecosystem: the energy, water, and carbon cycles are solved separately for a series of vegetation cohorts (groups of individual plants of similar size and plant functional type) distributed across a series of spatially implicit patches (representing collections of micro-environments that have a similar disturbance history). We define the equations that describe the energy, water, and carbon cycles in terms of total energy, water, and carbon, which simplifies the differential equations and guarantees excellent conservation of these quantities in long-term simulation (\&lt;\&thinsp;0.1\&thinsp;\% error over 50 years). We also show examples of ED-2.2 simulation results at single sites and across tropical South America. These results demonstrate the model's ability to characterize the variability of ecosystem structure, composition, and functioning both at stand and continental scales. A detailed model evaluation was conducted and is presented in a companion paper ({$<$}a href="\#bib1.bibx88"{$>$}Longo et al.{$<$}/a{$>$}, {$<$}a href="\#bib1.bibx88"{$>$}2019{$<$}/a{$><$}a href="\#bib1.bibx88"{$>$}a{$<$}/a{$>$}). Finally, we highlight some of the ongoing model developments designed to improve the model's accuracy and performance and to include processes hitherto not represented in the model.{$<$}/p{$>$}},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/K6X9FQME/Longo et al. - 2019 - The biophysics, ecology, and biogeochemistry of fu.pdf}
+}
+
+@article{longoNotSameOld2019,
+  title = {Not the Same Old(-Growth) Forests},
+  author = {Longo, Marcos and Keller, Michael},
+  date = {2019},
+  journaltitle = {New Phytologist},
+  volume = {221},
+  number = {4},
+  pages = {1672--1675},
+  issn = {1469-8137},
+  doi = {10.1111/nph.15636},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/nph.15636},
+  urldate = {2022-02-20},
+  abstract = {This article is a Commentary on Both et al., 221: 1853–1865.},
+  langid = {english},
+  keywords = {ecosystem function,forest degradation,forest structure and composition,logging,old-growth forests,plant traits,terrestrial biosphere models,tropical forests},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.15636},
+  file = {/Users/nidhivinod/Zotero/storage/VZGPYMKR/Longo and Keller - 2019 - Not the same old(-growth) forests.pdf}
 }
 
 @incollection{lowmanForestCanopies1995,
