--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -596,7 +596,7 @@ In general, however, this variation is accounted for via light competition.
 Models partition incoming radiation and radiation within the forest vertical profile (i.e., direct vs. diffuse light) using radiative transfer models or a system of two coupled ordinary differential equations, referred to as a two-stream approximation [@sellersCanopyReflectancePhotosynthesis1985; @fisherVegetationDemographicsEarth2018a]. 
 Using the latter method, single canopy layers are divided into sun and shade fractions (e.g., in the CLM model), while models with multiple vegetative layers can analytically solve the two-stream approximation for each layer. Thus, even in single-layer models, key physiological parameters like $V_{cmax}$ and $J_{max}$ vary, decreasing with increasing LAI, or lower light conditions [Table 2, e.g., @krinnerDynamicGlobalVegetation2005]. 
 In recent years, there has been a growing effort to incorporate vertical variation more directly in models, specifically as it pertains to leaf water potential and light absorption by leaves, along with a general increasing interest in making direct comparison between models and field measurements [@fisherPerspectivesFutureLand2020]. Several recent model developments are at the cutting edge of representing vertical variation. 
-Model developments by @Chen_et_al_2016, @Bonan_et_al_2018, and @Longo_et_al_2019 implement vertical gradients of irradiance, water content, leaf temperature, and the feedback between the evaporation of water into the vegetated air space and the humidity of the airspace, modulated by turbulence processes within the forest and a roughness layer that extends to roughly twice the height of the canopy [@fisherPerspectivesFutureLand2020]. 
+Model developments by @chenColumnCanopyAirTurbulent2019, @bonanModelingCanopyinducedTurbulence2018, and @longoBiophysicsEcologyBiogeochemistry2019 implement vertical gradients of irradiance, water content, leaf temperature, and the feedback between the evaporation of water into the vegetated air space and the humidity of the airspace, modulated by turbulence processes within the forest and a roughness layer that extends to roughly twice the height of the canopy [@fisherPerspectivesFutureLand2020]. 
 
 The findings of this review reinforce the notion that representing vertical structuring is essential to capturing forest dynamics under global change.
 Improved representation of vertical variation in forest structure and ecosystem function is critical for representing thermal sensitivity and has repeatedly been identified as an important step toward reduced uncertainty and more accurate characterization of biologically mediated feedbacks [@moorcroftMethodScalingVegetation2001; @banerjeeEffectVerticalCanopy2018; @bonanMovingIncorrectUseful2021]. 
