--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -382,6 +382,24 @@
   file = {/Users/nidhivinod/Zotero/storage/2PT5JRVB/Araki et al. - 2017 - Vertical and seasonal variations in temperature re.pdf}
 }
 
+@article{aroraCarbonConcentrationCarbon2020,
+  title = {Carbon–Concentration and Carbon–Climate Feedbacks in {{CMIP6}} Models and Their Comparison to {{CMIP5}} Models},
+  author = {Arora, Vivek K. and Katavouta, Anna and Williams, Richard G. and Jones, Chris D. and Brovkin, Victor and Friedlingstein, Pierre and Schwinger, Jörg and Bopp, Laurent and Boucher, Olivier and Cadule, Patricia and Chamberlain, Matthew A. and Christian, James R. and Delire, Christine and Fisher, Rosie A. and Hajima, Tomohiro and Ilyina, Tatiana and Joetzjer, Emilie and Kawamiya, Michio and Koven, Charles D. and Krasting, John P. and Law, Rachel M. and Lawrence, David M. and Lenton, Andrew and Lindsay, Keith and Pongratz, Julia and Raddatz, Thomas and Séférian, Roland and Tachiiri, Kaoru and Tjiputra, Jerry F. and Wiltshire, Andy and Wu, Tongwen and Ziehn, Tilo},
+  date = {2020-08-18},
+  journaltitle = {Biogeosciences},
+  volume = {17},
+  number = {16},
+  pages = {4173--4222},
+  publisher = {{Copernicus GmbH}},
+  issn = {1726-4170},
+  doi = {10.5194/bg-17-4173-2020},
+  url = {https://bg.copernicus.org/articles/17/4173/2020/},
+  urldate = {2022-02-20},
+  abstract = {{$<$}p{$><$}strong class="journal-contentHeaderColor"{$>$}Abstract.{$<$}/strong{$>$} Results from the fully and biogeochemically coupled simulations in which CO\textsubscript{2} increases at a rate of 1\&thinsp;\%\&thinsp;yr\textsuperscript{−1} (1pctCO2) from its preindustrial value are analyzed to quantify the magnitude of carbon–concentration and carbon–climate feedback parameters which measure the response of ocean and terrestrial carbon pools to changes in atmospheric CO\textsubscript{2} concentration and the resulting change in global climate, respectively. The results are based on 11 comprehensive Earth system models from the most recent (sixth) Coupled Model Intercomparison Project (CMIP6) and compared with eight models from the fifth CMIP (CMIP5). The strength of the carbon–concentration feedback is of comparable magnitudes over land (mean\&thinsp;±\&thinsp;standard deviation\&thinsp;=\&thinsp;0.97\&thinsp;±\&thinsp;0.40\&thinsp;PgC\&thinsp;ppm\textsuperscript{−1}) and ocean (0.79\&thinsp;±\&thinsp;0.07\&thinsp;PgC\&thinsp;ppm\textsuperscript{−1}), while the carbon–climate feedback over land (−45.1\&thinsp;±\&thinsp;50.6\&thinsp;PgC\&thinsp;\textsuperscript{∘}C\textsuperscript{−1}) is about 3 times larger than over ocean (−17.2\&thinsp;±\&thinsp;5.0\&thinsp;PgC\&thinsp;\textsuperscript{∘}C\textsuperscript{−1}). The strength of both feedbacks is an order of magnitude more uncertain over land than over ocean as has been seen in existing studies. These values and their spread from 11 CMIP6 models have not changed significantly compared to CMIP5 models. The absolute values of feedback parameters are lower for land with models that include a representation of nitrogen cycle. The transient climate response to cumulative emissions (TCRE) from the 11 CMIP6 models considered here is 1.77\&thinsp;±\&thinsp;0.37\&thinsp;\textsuperscript{∘}C\&thinsp;EgC\textsuperscript{−1} and is similar to that found in CMIP5 models (1.63\&thinsp;±\&thinsp;0.48\&thinsp;\textsuperscript{∘}C\&thinsp;EgC\textsuperscript{−1}) but with somewhat reduced model spread. The expressions for feedback parameters based on the fully and biogeochemically coupled configurations of the 1pctCO2 simulation are simplified when the small temperature change in the biogeochemically coupled simulation is ignored. Decomposition of the terms of these simplified expressions for the feedback parameters is used to gain insight into the reasons for differing responses among ocean and land carbon cycle models.{$<$}/p{$>$}},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/NCGWNIU6/Arora et al. - 2020 - Carbon–concentration and carbon–climate feedbacks .pdf}
+}
+
 @article{ashtonComparisonsStructureMixed1992,
   title = {Comparisons of {{Structure Among Mixed Dipterocarp Forests}} of {{North-Western Borneo}}},
   author = {Ashton, Peter S. and Hall, Pamela},
