--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -76,8 +76,6 @@ I find it interesting to try and link the empirical and theoretical knowledge on
 **Given that models vary greatly in how they capture vertical light gradients, what biophysical variables are included and how those variables are parameterized to vary (or not) across vertical gradients, we feel that it is beyond the scope of this paper to comprehensively list or explain which of those variables vary vertically across different models.**
 
 
-*[issue #82](https://github.com/EcoClimLab/vertical-thermal-review/issues/82)*
-
 ### Minor details that I hope will be of interest for the authors. Consider them as you see fit.
 
 L30 I did not understand ‘Scaling up’ in this sentence.
@@ -94,7 +92,7 @@ Figure 2: Homogenize the units (in parenthesis or in bracket) and add the unit f
 
 I like your figures, but maybe consider homogenizing a little bit the styles for the plots between figures 2 3 and 4.
 
-**This will be done by the New Phytologist editorial staff (because it is a Tansley review). We will work with them to ensure that all the figures look good.**
+**This will be done by the New Phytologist illustrators (because it is a Tansley review). We will work with them to ensure that all the figures look good.**
 
 L205-206 Maybe add some references. How many degrees? In your Figure 3 there is not really a difference between Tleaf and Tair when SWR = 0. Given that the transpiration nearly stops at night (high humidity, low conductance) I would expect Tleaf – Tair to be very close to zero.
 
